--- a/src/components/common/menu-aberto/styles.module.css
+++ b/src/components/common/menu-aberto/styles.module.css
@@ -10,7 +10,7 @@
   left: 0;
   width: 100%;
   height: 100dvh;
-  background-color: #151B2E;
+  background-color: #0F4096;
   transform: translateX(-140%);
   transition: transform 0.7s ease-in-out;
   z-index: 9999;
