--- a/src/components/common/header-mobile/styles.module.css
+++ b/src/components/common/header-mobile/styles.module.css
@@ -4,8 +4,7 @@
   left: 0;
   width: 100%;
   height: 80px;
-  background-color: #0F1426;
-  border-bottom: 1px solid #1E253C;
+  background-color: #0F4096;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -21,7 +20,8 @@
 
 .logo {
   height: auto;
-  max-height: 52px;
+  padding-top: 3px;
+  max-height: 78px;
   width: auto;
 }
 
