Cor dos bullets

--- a/src/styles/swiper.css
+++ b/src/styles/swiper.css
@@ -9,7 +9,7 @@
 }
 
 .swiper-pagination-bullet-active {
-  background: #bc9c6b !important;
+  background: #FACD0A !important;
   width: 36px !important;
   border-radius: 20px !important;
 }
