adicionando rota para cada produto

--- a/src/components/filiais/filiais-card/styles.module.css
+++ b/src/components/filiais/filiais-card/styles.module.css
@@ -95,3 +95,9 @@
   transform: scale(1.1);
   filter: brightness(1.2);
 }
+
+.cardLink {
+  text-decoration: none;
+  color: inherit;
+  display: block;
+}
