--- a/src/components/homepage/section-about/styles.module.css
+++ b/src/components/homepage/section-about/styles.module.css
@@ -41,12 +41,13 @@
 }
 
 .tag {
-  font-size: 14px;
+  font-size: 24px;
   color: #053282;
   letter-spacing: 1px;
-  font-weight: 400;
+  font-weight: 800;
   text-transform: uppercase;
   font-family: "FinalSix";
+  margin-bottom: 9px;
 }
 
 .divider {
@@ -56,18 +57,12 @@
   margin-top: 4px;
 }
 
-.aboutTitle {
-  font-size: 24px;
-  font-weight: 400;
-  line-height: 1.3;
-  font-family: "FinalSix";
-  color: #0f4196;
-}
 
 .description {
-  font-size: 1rem;
+  font-size: 19px;
   line-height: 1.6;
-  color: #0f4196
+  color: #0f4196;
+  font-weight: 100;
 }
 
 .button {
@@ -89,6 +84,10 @@
 }
 
 @media (max-width: 1024px) {
+  .sectionAbout {
+    margin-top: 30px;
+    padding-bottom: 0px;
+  }
   .contentWrapper {
     flex-wrap: wrap;
   }
@@ -101,11 +100,12 @@
   .tag {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: left;
   }
   .description {
     font-size: 12px;
-    text-align: center;
+    text-align: left;
+    max-width: 70%;
   }
 
   .aboutTitle {
