--- a/src/components/homepage/section-equipe/styles.module.css
+++ b/src/components/homepage/section-equipe/styles.module.css
@@ -7,9 +7,10 @@
   display: inline-block;
   color: #053282;
   font-family: "FinalSix";
-  font-size: 14px;
+  font-size: 24px;
   position: relative;
-  margin-bottom: 14px;
+  margin-bottom: 30px;
+  font-weight: 800;
 }
   /* color: #053282; */
 
@@ -21,7 +22,7 @@
 
 .quemFaz {
   text-align: center;
-  max-width: 800px;
+  max-width: 900px;
   margin: 0 auto 6rem;
 }
 
@@ -80,7 +81,7 @@
 }
 
 .textDescription {
-  font-size: 1rem;
+  font-size: 19px;
   line-height: 1.6;
   color: #0f4196;
   margin-bottom: 1.5rem;
@@ -108,14 +109,22 @@
 @media (max-width: 1024px) {
   .title {
     font-size: 18px;
+    text-align: center;
+
   }
   .description {
-    font-size: 12px
+    font-size: 12px;
   }
   .subtitle {
     font-size: 18px;
+
+  }
+  .tag {
+    text-align: center;
   }
   .textDescription {
     font-size: 12px;
+    text-align: center;
+    margin-bottom: 10px;
   }
 }
