--- a/src/components/homepage/section-banner/styles.module.css
+++ b/src/components/homepage/section-banner/styles.module.css
@@ -9,7 +9,7 @@
   height: 100%;
 }
 
-.banner {
+/* .banner {
   width: 100%;
   height: 100vh;
   display: flex;
@@ -18,7 +18,21 @@
   position: relative;
   text-align: center;
   color: white;
+} */
+
+.banner {
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  overflow: hidden;
 }
+
+.bgImage {
+  object-fit: cover;
+  object-position: center;
+  z-index: 0;
+}
+
 
 .overlay {
   content: "";
@@ -166,6 +180,10 @@
   .swiper,
   .banner {
     height: 570px;
+  }
+  .bgImage {
+    object-fit: cover;
+    object-position: center;
   }
   .title {
     font-size: 28px;
