--- a/src/components/homepage/section-filiais/styles.module.css
+++ b/src/components/homepage/section-filiais/styles.module.css
@@ -82,7 +82,7 @@
 
 .filiaisSwiper :global(.swiper-pagination) {
   position: relative;
-  margin-top: 1rem;
+  margin-top: 30px;
   display: flex;
   justify-content: center;
 }
