--- a/src/components/common/section-title/styles.module.css
+++ b/src/components/common/section-title/styles.module.css
@@ -4,10 +4,10 @@
 }
 
 .title {
-  font-size: 44px;
+  font-size: 74px;
   font-weight: 800;
   color: #0f4196;
-  font-family: FinalSix;
+  font-family: Magnolia;
   margin-bottom: 0.5rem;
 }
 
