--- a/src/components/homepage/section-equipe/styles.module.css
+++ b/src/components/homepage/section-equipe/styles.module.css
@@ -6,8 +6,8 @@
 .tag {
   display: inline-block;
   color: #053282;
-  font-family: "FinalSix";
-  font-size: 24px;
+  font-family: "Magnolia";
+  font-size: 64px;
   position: relative;
   margin-bottom: 30px;
   font-weight: 800;
