Espacos e tamanhos de texto

--- a/src/components/homepage/section-equipe/styles.module.css
+++ b/src/components/homepage/section-equipe/styles.module.css
@@ -144,4 +144,8 @@
     margin-bottom: 10px;
     text-align: right;
   }
+  .equipeSection {
+    padding-top: 70px;
+    padding-bottom: 0;
+  }
 }
