--- a/src/components/homepage/section-news/styles.module.css
+++ b/src/components/homepage/section-news/styles.module.css
@@ -147,7 +147,8 @@
     margin-left: -50vw;
     left: 50%;
     height: 90px;
-    border-width: 4px;
+    border-width: 2px;
+    margin-top: 25px;
   }
 
   .fullBar {
