--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,35 +1,14 @@
 /* FinalSix */
 @font-face {
-  font-family: "FinalSix";
-  src: url("/fonts/FinalSix/FinalSix-Book.otf") format("opentype");
-  font-weight: 300;
+  font-family: "Neulis";
+  src: url("/fonts/NEULIS/NEULIS/NeulisAlt-Regular.otf") format("opentype");
+  font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "FinalSix";
-  src: url("/fonts/FinalSix/FinalSix-Medium.otf") format("opentype");
-  font-weight: 500;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "FinalSix";
-  src: url("/fonts/FinalSix/FinalSix-Bold.otf") format("opentype");
-  font-weight: 700;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "FinalSix";
-  src: url("/fonts/FinalSix/FinalSix-ExtraBold.otf") format("opentype");
-  font-weight: 800;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Magnolia";
-  src: url("/fonts/Magnolia Script.otf") format("opentype");
+  font-family: "stash-md";
+  src: url("/fonts/STASH/Stash-Md.otf") format("opentype");
   font-weight: 800;
   font-style: normal;
 }
@@ -44,7 +23,7 @@ h2,
 h3,
 p,
 span {
-  font-family: "FinalSix", sans-serif;
+  font-family: "Neulis", sans-serif;
 }
 
 
