--- a/src/components/about/missao-valores-visao/styles.module.css
+++ b/src/components/about/missao-valores-visao/styles.module.css
@@ -6,7 +6,7 @@
 }
 
 .title {
-  font-family: "FinalSix";
+  font-family: "Neulis";
   font-weight: 400;
   font-size: 24px;
   line-height: 32px;
@@ -39,7 +39,7 @@
 .cardTitle {
   color: #bc9c6b;
   font-size: 1rem;
-  font-family: "FinalSix";
+  font-family: "Neulis";
   text-transform: uppercase;
   margin-bottom: 1rem;
 }
