--- a/src/components/homepage/section-banner/styles.module.css
+++ b/src/components/homepage/section-banner/styles.module.css
@@ -42,7 +42,7 @@
 .title {
   font-size: 40px;
   font-weight: 700;
-  font-family: "FinalSix";
+  font-family: "Neulis";
   color: #fff;
   margin-bottom: 1rem;
   line-height: 1.2;
