--- a/src/components/homepage/section-dicas/components/dicas-card/styles.module.css
+++ b/src/components/homepage/section-dicas/components/dicas-card/styles.module.css
@@ -35,7 +35,7 @@
 }
 
 .titulo {
-  font-family: "FinalSix";
+  font-family: "Neulis";
   color: #0f4196;
   margin-bottom: 12px;
 
@@ -43,7 +43,7 @@
 }
 
 .descricao {
-  font-family: "FinalSix";
+  font-family: "Neulis";
   font-weight: 100;
   color: #000000;
   font-size: 16px;
