--- a/src/components/homepage/section-equipe/styles.module.css
+++ b/src/components/homepage/section-equipe/styles.module.css
@@ -9,7 +9,7 @@
 .tag {
   display: inline-block;
   color: #053282;
-  font-family: "Magnolia";
+  font-family: "stash-md";
   font-size: 64px;
   position: relative;
   margin-bottom: 30px;
@@ -36,7 +36,7 @@
 }
 
 .title {
-  font-family: "FinalSix";
+  font-family: "Neulis";
   font-size: 24px;
   font-weight: 700;
   margin-bottom: 1rem;
@@ -82,7 +82,7 @@
 }
 
 .subtitle {
-  font-family: "FinalSix";
+  font-family: "Neulis";
   font-size: 24px;
   font-weight: 700;
   margin: 1rem 0;
