--- a/src/components/areas/content/styles.module.css
+++ b/src/components/areas/content/styles.module.css
@@ -6,7 +6,7 @@
 }
 
 .title {
-    font-family: "FinalSix";
+    font-family: "Neulis";
     font-size: 34px;
     font-weight: 400;
     line-height: 44px;
