--- a/src/components/common/filiais-cta/styles.module.css
+++ b/src/components/common/filiais-cta/styles.module.css
@@ -48,7 +48,7 @@
 }
 
 .textWrapper h2 {
-  font-family: "FinalSix";
+  font-family: "Neulis";
   font-weight: 400;
   font-size: 24px;
   line-height: 32px;
