--- a/src/components/common/menu-aberto/styles.module.css
+++ b/src/components/common/menu-aberto/styles.module.css
@@ -55,7 +55,7 @@
 .navList li a {
   color: white;
   text-decoration: none;
-  font-family: "FinalSix";
+  font-family: "Neulis";
   font-weight: 400;
 }
 
