--- a/src/components/common/section-title/styles.module.css
+++ b/src/components/common/section-title/styles.module.css
@@ -7,7 +7,7 @@
   font-size: 74px;
   font-weight: 800;
   color: #0f4196;
-  font-family: Magnolia;
+  font-family: stash-md;
   margin-top: 25px
 }
 
