--- a/src/components/homepage/section-dicas/styles.module.css
+++ b/src/components/homepage/section-dicas/styles.module.css
@@ -35,7 +35,7 @@
 .tag {
   display: inline-block;
   color: #053282;
-  font-family: "FinalSix";
+  font-family: "Neulis";
   font-size: .85rem;
   position: relative;
   margin-bottom: 0.5rem;
@@ -49,7 +49,7 @@
 }
 
 .title {
-  font-family: "FinalSix";
+  font-family: "Neulis";
   font-size: 24px;
   font-weight: 700;
   margin-bottom: 1.5rem;
