--- a/src/components/homepage/section-receitas/styles.module.css
+++ b/src/components/homepage/section-receitas/styles.module.css
@@ -35,7 +35,7 @@
 .tag {
   display: inline-block;
   color: #053282;
-  font-family: "FinalSix";
+  font-family: "Neulis";
   font-size: .85rem;
   position: relative;
   margin-bottom: 0.5rem;
@@ -49,7 +49,7 @@
 }
 
 .title {
-  font-family: "Magnolia";
+  font-family: "stash-md";
   font-size: 74px;
   font-weight: 700;
   color: #FACD0A;;
