--- a/src/components/homepage/section-dicas/styles.module.css
+++ b/src/components/homepage/section-dicas/styles.module.css
@@ -34,7 +34,7 @@
 
 .tag {
   display: inline-block;
-  color: #053282;
+  color: #CE102C;
   font-family: "Neulis";
   font-size: .85rem;
   position: relative;
@@ -44,7 +44,7 @@
 .divider {
   width: 70px;
   height: 2px;
-  background-color: #053282;
+  background-color: #CE102C;
   margin: 4px auto 0;
 }
 
@@ -53,7 +53,7 @@
   font-size: 24px;
   font-weight: 700;
   margin-bottom: 1.5rem;
-  color: #0f4196;
+  color: #CE102C;
 }
 
 .subtitle {
@@ -61,7 +61,7 @@
   max-width: 800px;
   margin: 0 auto 3rem;
   line-height: 1.6;
-  color: #0f4196;
+  color: #CE102C;
 }
 
 .carouselWrapper {
@@ -91,8 +91,8 @@
 
 .fullBarWrapper {
   margin: 3rem 0;
-  border-top: 2px solid #0f4196;
-  border-bottom: 2px solid #0f4196;
+  border-top: 2px solid #CE102C;
+  border-bottom: 2px solid #CE102C;
   overflow: hidden;
   width: calc(100vw + 4rem);
   left: 50%;
