--- a/src/components/homepage/section-news/styles.module.css
+++ b/src/components/homepage/section-news/styles.module.css
@@ -1,5 +1,5 @@
 .section_two {
-    background-color: #faebc8;
+    background-color: #F4E3C0;
     margin-left: 4rem;
     padding-left: 20px;
     padding-right: 20px;
@@ -18,7 +18,7 @@
 .title {
     font-size: 34px;
     font-weight: 800;
-    color: #0f4196;
+    color: #CE102C;
     font-family: "Neulis";
     max-width: 380px;
     margin: 0 auto 1rem;
@@ -27,14 +27,14 @@
 .divider {
     width: 100%;
     height: 2px;
-    background-color: #0f4196;
+    background-color: #CE102C;
     margin: 6px auto 0;
 }
 
 .description {
     font-size: 19px;
     font-weight: 100;
-    color: #0f4196;
+    color: #CE102C;
     line-height: 1.6;
 }
 .productsGrid {
@@ -69,13 +69,13 @@
     font-family: stash-md;
     font-size: 33px;
     font-weight: 800;
-    color: #0f4196;
+    color: #CE102C;
     margin-bottom: 0.5rem;
 }
 
 .productText {
     font-size: 14px;
-    color: #0f4196;
+    color: #CE102C;
     line-height: 1.5;
     max-width: 320px;
     margin: 0 auto;
@@ -89,7 +89,7 @@
         font-family: stash-md;
         font-size: 23px;
         font-weight: 800;
-        color: #0f4196;
+        color: #CE102C;
         margin-bottom: 0.5rem;
     }
 }
@@ -118,8 +118,8 @@
 
 .fullBarWrapper {
   margin: 3rem 0;
-  border-top: 2px solid #0f4196;
-  border-bottom: 2px solid #0f4196;
+  border-top: 2px solid #CE102C;
+  border-bottom: 2px solid #CE102C;
   overflow: hidden;
   width: calc(100vw + 4rem);
   left: 50%;
