--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,7 +15,7 @@
 
 
 body {
-  background-color: #faebc8;
+  background-color: #F4E3C0;
 }
 
 h1,
@@ -26,7 +26,9 @@ span {
   font-family: "Neulis", sans-serif;
 }
 
-
+p {
+  color: black!important;
+}
 .glow {
   position: absolute;
   top: -100px;
