--- a/src/components/common/footer/styles.module.css
+++ b/src/components/common/footer/styles.module.css
@@ -1,7 +1,7 @@
 .footerContainer {
   padding: 24px;
-  background-color: #006efa;
-  color: #faebc8;
+  background-color: #CE102C;
+  color: #F4E3C0;
   width: 100%;
   font-size: 12px;
   font-weight: 700;
@@ -53,7 +53,7 @@
   font-size: 14px;
   font-weight: 700;
   margin-bottom: 12px;
-  color: #faebc8;
+  color: #FFC600!important;
 }
 
 .footerList {
@@ -63,7 +63,7 @@
 }
 
 .footerList a {
-  color: #faebc8;
+  color: #F4E3C0;
   text-decoration: none;
   font-weight: 600;
   font-size: 12px;
@@ -75,7 +75,7 @@
 
 .footerDivider {
   border: none;
-  border-top: 1px solid #0f4196;
+  border-top: 1px solid #CE102C;
   opacity: 0.3;
   margin: 1rem 0;
 }
@@ -83,7 +83,7 @@
 .footerCopy {
   text-align: center;
   font-size: 12px;
-  color: #faebc8;
+  color: #F4E3C0;
 }
 
 @media (max-width: 1024px) {
