--- a/src/components/common/header-mobile/styles.module.css
+++ b/src/components/common/header-mobile/styles.module.css
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   height: 80px;
-  background-color: #0F4096;
+  background-color: #9C182F;
   display: flex;
   justify-content: space-between;
   align-items: center;
