--- a/src/components/common/section-title/styles.module.css
+++ b/src/components/common/section-title/styles.module.css
@@ -6,14 +6,14 @@
 .title {
   font-size: 74px;
   font-weight: 800;
-  color: #0f4196;
+  color: #CE102C;
   font-family: stash-md;
   margin-top: 25px
 }
 
 .divider {
   height: 2px;
-  background-color: #0f4196;
+  background-color: #CE102C;
   margin: 0 auto;
 }
 
