--- a/src/components/homepage/section-about/styles.module.css
+++ b/src/components/homepage/section-about/styles.module.css
@@ -42,7 +42,7 @@
 
 .tag {
   font-size: 64px;
-  color: #053282;
+  color: #CE102C;
   letter-spacing: 1px;
   font-weight: 800;
   font-family: stash-md;
@@ -53,7 +53,7 @@
 .divider {
   width: 80px;
   height: 2px;
-  background-color: #053282;
+  background-color: #CE102C;
   margin-top: 4px;
 }
 
@@ -61,7 +61,7 @@
 .description {
   font-size: 19px;
   line-height: 1.6;
-  color: #0f4196;
+  color: #CE102C;
   font-weight: 100;
 }
 
