--- a/src/components/homepage/section-form/styles.module.css
+++ b/src/components/homepage/section-form/styles.module.css
@@ -6,7 +6,7 @@
 }
 
 .newsletterBox {
-  background: #053282;
+  background: #CE102C;
   border-radius: 40px;
   padding: 0;
   max-width: 900px;
@@ -22,7 +22,7 @@
 }
 
 .title {
-  color: #faebc8;
+  color: #F4E3C0;
   font-size: 32px;
   text-align: center;
   margin-bottom: 2rem;
@@ -67,7 +67,7 @@
 }
 
 .label {
-  color: #faebc8;
+  color: #F4E3C0;
   margin-bottom: 6px;
   font-size: 16px;
   font-family: "Neulis";
@@ -98,7 +98,7 @@
 }
 
 .checkboxLabel {
-  color: #faebc8;
+  color: #F4E3C0;
   font-size: 16px;
   font-family: "Neulis";
 }
@@ -129,7 +129,7 @@
 
 .submitBtn:hover {
   background: #facd0a;
-  color: #053282;
+  color: #CE102C;
 }
 
 .disabled {
@@ -147,7 +147,7 @@
   background: #facd0a;
   padding: 8px 14px;
   border-radius: 6px;
-  color: #053282;
+  color: #CE102C;
   font-weight: bold;
   text-align: center;
   font-family: "Neulis";
@@ -155,7 +155,7 @@
 
 .errorBox {
   background: #f44336;
-  color: #faebc8;
+  color: #F4E3C0;
   padding: 0.8rem;
   border-radius: 10px;
   text-align: center;
@@ -165,8 +165,8 @@
 .successOverlay {
   position: absolute;
   inset: 0;
-  background: #053282;
-  color: #faebc8;
+  background: #CE102C;
+  color: #F4E3C0;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -201,5 +201,5 @@
 
 .successBtn:hover {
   background: #facd0a;
-  color: #053282;
+  color: #CE102C;
 }
