--- a/src/components/homepage/section-receitas/components/receitas-card/styles.module.css
+++ b/src/components/homepage/section-receitas/components/receitas-card/styles.module.css
@@ -1,5 +1,5 @@
 .card {
-  background-color: #faebc8;
+  background-color: #F4E3C0;
   border-radius: 12px;
   overflow: hidden;
   text-align: left;
@@ -27,7 +27,7 @@
 .nome {
   font-family: "Neulis";
   font-weight: 400;
-  color: #0f4196;
+  color: #CE102C;
   font-size: 16px;
   line-height: 32px;
   text-transform: uppercase;
@@ -58,7 +58,7 @@
 .divisor {
   border: none;
   height: 1px;
-  background-color: #0f4196;
+  background-color: #CE102C;
   margin: 1rem 0 0.75rem;
 }
 
