--- a/src/components/homepage/section-receitas/styles.module.css
+++ b/src/components/homepage/section-receitas/styles.module.css
@@ -15,6 +15,10 @@
   z-index: -1;
 }
 
+.paragrafoTitulo {
+  color: white!important;
+}
+
 .overlay {
   position: relative;
   z-index: 1;
@@ -34,7 +38,7 @@
 
 .tag {
   display: inline-block;
-  color: #053282;
+  color: #CE102C;
   font-family: "Neulis";
   font-size: .85rem;
   position: relative;
@@ -44,7 +48,7 @@
 .divider {
   width: 70px;
   height: 2px;
-  background-color: #053282;
+  background-color: #CE102C;
   margin: 4px auto 0;
 }
 
