--- a/src/components/common/menu-aberto/styles.module.css
+++ b/src/components/common/menu-aberto/styles.module.css
@@ -48,7 +48,7 @@
   padding: 0;
   text-align: center;
   line-height: 2.6;
-  font-size: 18px;
+  font-size: 48px;
   font-weight: 600;
 }
 
@@ -91,5 +91,8 @@
   .logoWrapper,
   .closeButton {
     display: none;
+  }
+  .navList { 
+    font-size: 22px;
   }
 }
