adding degrade background to tips section

--- a/src/components/homepage/section-dicas/styles.module.css
+++ b/src/components/homepage/section-dicas/styles.module.css
@@ -3,8 +3,16 @@
   width: 100%;
   min-height: 61vh;
   overflow: hidden;
-}
+  background-image: url('/banners/degrade.jpg');
 
+  /* background: radial-gradient(circle at 85% 10%,
+      #f5711c 0%,
+      rgba(245, 113, 28, 0) 40%),
+    linear-gradient(90deg,
+      #f13361 0%,
+      #ea0031 40%,
+      #ea0031 100%); */
+}
 .backgroundImage {
   width: 100%;
   height: auto;
