--- a/src/components/homepage/section-equipe/styles.module.css
+++ b/src/components/homepage/section-equipe/styles.module.css
@@ -1,6 +1,7 @@
-.equipeSection {
+.sectionWrapper {
   padding: 6rem 2rem;
   color: #ffffff;
+
 }
 .fullBarWrapper {
   margin-bottom: 0!important;
@@ -65,6 +66,7 @@
 .button:hover {
   background-color: #a78558;
 }
+
 
 .trabalheConosco {
   display: flex;
