--- a/src/components/common/section-title/styles.module.css
+++ b/src/components/common/section-title/styles.module.css
@@ -3,6 +3,7 @@
 }
 
 .title {
+  line-height: 72px;
   font-size: 74px;
   font-weight: 800;
   color: #CE102C;
@@ -12,7 +13,7 @@
 
 @media (max-width: 1024px) {
   .title {
-    font-size: 26px;
+    font-size: 32px;
     margin-top: 40px;
   }
 }
