--- a/src/components/homepage/section-two-top/styles.module.css
+++ b/src/components/homepage/section-two-top/styles.module.css
@@ -1,34 +1,13 @@
 .section_two {
     background-color: #F4E3C0;
     margin-left: 4rem;
-    padding-left: 20px;
-    padding-right: 20px;
 }
 
 .container {
     max-width: 1200px;
     margin: 0 auto;
     text-align: center;
-}
-
-.left {
-    margin-bottom: 3rem;
-}
-
-.title {
-    font-size: 32px;
-    font-weight: 800;
-    color: #CE102C;
-    font-family: "Neulis";
-    max-width: 380px;
-    margin: 0 auto 1rem;
-}
-
-.divider {
-    width: 100%;
-    height: 2px;
-    background-color: #CE102C;
-    margin: 6px auto 0;
+    width: 90%;
 }
 
 .description {
@@ -36,8 +15,10 @@
     font-weight: 100;
     color: #CE102C;
     line-height: 1.6;
-    margin-bottom:60px;
+    margin-bottom: 40px;
+    margin-top: 10px;
 }
+
 .descriptionProducts {
     font-size: 19px;
     font-weight: 100;
@@ -97,79 +78,10 @@
         margin-top: 25px;
         margin-left: 0px;
     }
-    .productTitle {
-        font-family: stash-md;
-        font-size: 23px;
-        font-weight: 800;
-        color: #CE102C;
-        margin-bottom: 0.5rem;
-    }
     .description {
         margin-bottom: 40px;
+        line-height: 25px;
+        font-size: 16px;
+        margin-top: 0px;
     }
-    .descriptionProducts {
-        margin-bottom: 34px;
-    }
-}
-
-@media (max-width: 768px) {
-    .productsGrid {
-        grid-template-columns: 1fr;
-        gap: 3rem;
-    }
-
-    .section_two {
-        margin-left: 0;
-    }
-
-    .title {
-        font-size: 18px;
-        margin-top: 110px;
-    }
-
-    .description {
-        font-size: 14px;
-        padding: 0 1rem;
-    }
-}
-
-
-.fullBarWrapper {
-  margin: 3rem 0;
-  border-top: 2px solid #CE102C;
-  border-bottom: 2px solid #CE102C;
-  overflow: hidden;
-  width: calc(100vw + 4rem);
-  left: 50%;
-  margin-left: calc(-50vw - 2rem);
-  position: relative;
-  height: 90px;
-  margin-bottom: 10px;
-}
-
-.fullBarTrack {
-  display: flex;
-  width: max-content;
-  height: 100%;
-}
-
-.fullBar {
-  object-fit: cover;
-  height: 100%;
-  width: auto;
-}
-
-@media (max-width: 768px) {
-  .fullBarWrapper {
-    width: 100vw;
-    margin-left: -50vw;
-    left: 50%;
-    height: 90px;
-    border-width: 2px;
-    margin-top: 25px;
-  }
-
-  .fullBar {
-    height: 90px;
-  }
 }
